2004-01-13  Dan Dennedy <dan@dennedy.org>
	* encodedv/dvconnect.c: change a video1394 ioctl macro for better
	  kernel 2.6 compatibility.
	* libdv/enc_input.c: add luma clamping on pgm input luma for bug 874984.

2004-01-04  Dan Dennedy <dan@dennedy.org>
	* encodedv/dvconnect.c, libdv/dv1394.h: fix for kernel 2.6 compatibility,
	  only backwards compatible to kernel 2.4.21.

2003-12-15  Dan Dennedy <dan@dennedy.org>
	* encode.c, dv.h: freeing the global mem in dv_encoder_free() is not safe
	  when working with multiple encoders and free-ing them at will.
	  Added dv_cleanup() to free memory allocated in dv_init().

2003-11-23  Stefan Lucke <stefan@lucke.in-berlin.de>
  * PAL fix for decode color rendering now in head
  * additional API functions:
      dv_get_num_samples (dv_decoder_t *dv)
      dv_get_num_channels (dv_decoder_t *dv)
      dv_get_raw_samples (dv_decoder_t *dv, int chan)
      dv_is_4ch (dv_decoder_t *dv)
      dv_is_PAL (dv_decoder_t *dv)
      dv_is_progressive (dv_decoder_t *dv)
      dv_set_quality (dv_decoder_t *dv, int q)
      dv_get_frequency (dv_decoder_t *dv)
   * removed some internal struct usage from playdv

2003-11-17  Dan Dennedy <dan@dennedy.org>
	* libdv/encode.c: revert change on encoder lookup table allocation.

2003-11-10  Dan Dennedy  <dan@dennedy.org>
	* libdv/dv.c, encode.c: bugfix thread safetiness of encoder.
	  In a threaded environment, one should call dv_init() to setup
	  libdv properly before dv_decoder_new() or dv_encoder_new().

2003-10-29  Dan Dennedy  <dan@dennedy.org>
	* libdv/parse.c: bugfix memory leak on error parsing header.
	* libdv/dv.c: bugfix memory leak on non-freed bitstream_t
	* libdv/dv.c, encode.c: remove encoder-specific malloc and init from
	  the decoder init path. bugfix memory leaks in vlc.

2003-10-27  Dan Dennedy  <dan@dennedy.org>
	* libdv/enc_output.c, audio.c: fix speed flag handling for SMPTE 314M

2003-10-20  Charles 'Buck' Krasic  <krasic@acm.org>
