@@ -1,5 +1,5 @@
 .\" encodedv - encode a series of images to a digital video stream
-.\" Copyright (c) 2001 James Bowman, Peter Schlaile, Daniel Kobras
+.\" Copyright (c) 2001-2004 James Bowman, Peter Schlaile, Daniel Kobras
 .\"
 .\" This manual page is free software; you can redistribute it and/or modify
 .\" it under the terms of the GNU General Public License as published by
@@ -87,7 +87,6 @@ Choose audio-input-filter: [>none<, wav, dsp]
 .TP
 \fB\-o\fR, \fB\-\-output\fR=\fIfilter-name\fR
 Choose output-filter: [>raw<]
-Hint for Arne Schirmacher to add AVI support ;-)
 .TP
 \fB\-q\fR, \fB\-\-static\-qno\fR=\fItable-no\fR
 Static qno tables for quantisation on 2 VLC passes. 
@@ -114,7 +113,7 @@ Show help message.
 \fB\-\-usage\fR
 Display brief usage message.
 .SH "SEE ALSO"
-.BR playdv (1).
+.BR playdv (1), dvconnect (1), dubdv (1), encodedv (1).
 .SH AVAILABILITY
 See http://libdv.sourceforge.net/ for the latest version.
 .SH AUTHORS
