@@ -1,5 +1,5 @@
 .\" playdv - display digital video streams on screen
-.\" Copyright (c) 2001 Charles 'Buck' Krasic, Erik Walthinsen, Daniel Kobras
+.\" Copyright (c) 2001-2004 Charles 'Buck' Krasic, Erik Walthinsen, Daniel Kobras
 .\"
 .\" This manual page is free software; you can redistribute it and/or modify
 .\" it under the terms of the GNU General Public License as published by
@@ -123,7 +123,7 @@ Show help message. Use this command to get a brief description of available opti
 \fB\-\-usage\fR
 Display brief usage message.
 .SH "SEE ALSO"
-.BR encodedv (1).
+.BR dvconnect (1), dubdv (1), encodedv (1).
 .SH AVAILABILITY
 See http://libdv.sourceforge.net/ for the latest version.
 .SH AUTHORS
