@@ -2,6 +2,12 @@
 	* encodedv/dvconnect.c: change a video1394 ioctl macro for better
 	  kernel 2.6 compatibility.
 	* libdv/enc_input.c: add luma clamping on pgm input luma for bug 874984.
+	* configure.ac, playdv/Makefile.am: do not build playdv if no gtk, xv, or
+	  sdl. Miscellaneous build fixes: no xv test if no gtk, permit cflags from
+	  make command line.
+	* encodedv/Makefile.am: build and install insert_audio.c as dubdv.
+	* encodedv/dvdub.1, dvconnect.1: added man pages.
+	* encodedv/dvconnect.c: make default video1394 device now /dev/video1394/0.
 
 2004-01-04  Dan Dennedy <dan@dennedy.org>
 	* encodedv/dvconnect.c, libdv/dv1394.h: fix for kernel 2.6 compatibility,
